multi_index_map_derive2/tests/ui/duplicate.stderr
error: duplicate #[multi_index(...)] attribute
 --> tests/ui/duplicate.rs:6:5
  |
6 |     #[multi_index(ordered_unique)]
  |     ^
